Ignore changes in the IAA notebook by default

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ factgenie/config/config.yml
 factgenie/config/llm-eval
 factgenie/config/llm-gen
 factgenie/config/crowdsourcing
+
+# ignore changes in the notebook by default (to avoid adding the notebook after each run)
+factgenie/notebooks/inter_annotator_agreement.ipynb
