--- a/factgenie/data/datasets.yml
+++ b/factgenie/data/datasets.yml
@@ -3,7 +3,7 @@ quintd1-openweather:
   description: '<p>The <code>openweather</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
     dataset</a>.  Contains weather forecasts from <a href="https://openweathermap.org/forecast5">OpenWeather</a>.</p><p><i>Note:
     annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
-  enabled: true
+  enabled: false
   name: quintd1-openweather
   splits:
   - dev
@@ -19,7 +19,7 @@ xsum-debug:
   class: basic.PlainTextDataset
   description: Sample of 5 examples from the <a href="https://github.com/EdinburghNLP/XSum">XSum</a>
     dataset.
-  enabled: true
+  enabled: false
   name: xsum-debug
   splits:
   - test
