--- a/factgenie/config/llm-gen/ollama-example.yaml
+++ b/factgenie/config/llm-gen/ollama-example.yaml
@@ -1,5 +1,5 @@
-type: ollama
-model: llama3.3
+api_provider: ollama
+model: llama3.3:70b
 # You can run ollama also on other machine than factgenie 
 #  e.g. we run it on a machine tdll-3gpu3 and access it from any machine which is withing the same firewall
 #  in that case we use api_url: http://tdll-3gpu3.ufal.hide.ms.mff.cuni.cz:11434/api/
