--- a/factgenie/config/llm-eval/ollama-example.yaml
+++ b/factgenie/config/llm-eval/ollama-example.yaml
@@ -25,6 +25,9 @@ annotation_span_categories:
     color: "rgb(102, 102, 102)"
     description: "The text is problematic for another reason, e.g. grammatically or stylistically incorrect, irrelevant, or repetitive."
 annotation_overlap_allowed: true
+extra_args:
+  with_reason: true
+  with_occurence_index: true
 prompt_strat: default
 prompt_template: |
   Given the data:
@@ -35,13 +38,15 @@ prompt_template: |
   ```
   {text}
   ```
-  Output the errors as a JSON list "annotations" in which each object contains fields  "reason", "text", and "annotation_type". The value of "text" is the text of the error. The value of "reason" is the reason for the error. The value of "annotation_type" is one of {0, 1, 2, 3} based on the following list:
+  Output the errors as a JSON list "annotations" in which each object contains fields  "reason", "text", "annotation_type" and "occurence_index". The value of "text" is the text of the error. The value of "reason" is the reason for the error. The value of "annotation_type" is one of {0, 1, 2, 3} based on the following list:
   - 0: Incorrect fact: The fact in the text contradicts the data.
   - 1: Not checkable: The fact in the text cannot be checked in the data.
   - 2: Misleading: The fact in the text is misleading in the given context.
   - 3: Other: The text is problematic for another reason, e.g. grammatically or stylistically incorrect, irrelevant, or repetitive.
 
-  The list should be sorted by the position of the error in the text. Make sure that the annotations are not overlapping.
+  The value of "occurence_index" is a 0-based index of the span. It is useful in case there are multiple exact-string case-insensitive matches of "text" in the input. For example, if you want annotate the *second* occurence of the span with the value "the" out of three in total, set "occurence_index" to 1. If there are no ambiguities, leave it set to 0.
+  
+  Make sure that the annotations are not overlapping.
 
   *Example:*
   data:
@@ -56,6 +61,6 @@ prompt_template: |
   Nokia 3310 is produced in Finland and features a 320x320 display. It is available in black color. The data seem to provide only partial information about the phone.
   ```
   output:
-  ```{ "annotations": [{"reason": "The country where the phone is produced is not mentioned in the data.", "text": "produced in Finland", "annotation_type": 1}, {"reason": "The data mentions that the display has resolution 320x240px.", "text": "320x320", "annotation_type": 0}, {"reason": "Misleadingly suggests that the phone is not available in other colors.", "text": "available in black color", "annotation_type": 2}, {"reason": "The note is irrelevant for the phone description.", "text": "The data seem to provide only partial information about the phone.", "annotation_type": 3}] }
+  ```{ "annotations": [{"reason": "The country where the phone is produced is not mentioned in the data.", "text": "produced in Finland", "annotation_type": 1, "occurence_index": 0}, {"reason": "The data mentions that the display has resolution 320x240px.", "text": "320x320", "annotation_type": 0, "occurence_index": 0}, {"reason": "Misleadingly suggests that the phone is not available in other colors.", "text": "available in black color", "annotation_type": 2, "occurence_index": 0}, {"reason": "The note is irrelevant for the phone description.", "text": "The data seem to provide only partial information about the phone.", "annotation_type": 3, "occurence_index": 0}] }
   ```
   Note that some details may not be mentioned in the text: do not count omissions as errors. Also do not be too strict: some facts can be less specific than in the data (rounded values, shortened or abbreviated text, etc.), do not count these as errors. If there are no errors in the text, "annotations" will be an empty list.
